syntax = "proto3";
package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";

message AddChainProposal {
  string title = 1;
  string description = 2;
  string chainID = 3; 
  uint64 blockHeight = 4; 
  string blockHashAtHeight = 5; 
}
