syntax = "proto3";
package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";

service Msg {
    rpc DeployNewSmartContract(MsgDeployNewSmartContractRequest) returns (DeployNewSmartContractResponse);
    rpc RemoveSmartContractDeployment(MsgRemoveSmartContractDeploymentRequest) returns (RemoveSmartContractDeploymentResponse);
}

message MsgDeployNewSmartContractRequest {
  string creator = 1;
  string title = 2;
  string description = 3;
  
  string abiJSON = 4; 
  string bytecodeHex = 5; 
}
message DeployNewSmartContractResponse {}

message MsgRemoveSmartContractDeploymentRequest {
  string Sender = 1;
  uint64 smartContractID = 2;
  string chainReferenceID = 3;
}
message RemoveSmartContractDeploymentResponse {}
